# bidhub

./: .env.example  .gitignore  docker-compose.yaml  nginx.conf  readme.md
backend/: .ruff.toml  Dockerfile  alembic.ini  pyproject.toml  readme.md
backend/scripts/: web_api.sh  worker.sh
backend/src/bidhub/application/dto/: auction.py  bid.py  common.py  task_queue.py  user.py
backend/src/bidhub/application/exceptions/: __init__.py  already_exists.py  authentication.py  base.py  not_found.py
backend/src/bidhub/core/exceptions/: __init__.py  access.py  base.py  validation.py
backend/src/bidhub/core/models/: __init__.py  auction.py  bid.py  user.py
backend/src/bidhub/core/services/: __init__.py  access.py  auction.py  bid.py  user.py
backend/src/bidhub/core/validators/: __init__.py  common.py  user.py
backend/src/bidhub/infrastructure/: env.py  exceptions.py  json_encoder.py
backend/src/bidhub/infrastructure/auth/: password_manager.py
backend/src/bidhub/infrastructure/rabbit_mq/: config.py  schedule_finish_auction.py  send_email.py
backend/src/bidhub/infrastructure/redis/: config.py  rate_limiter.py
backend/src/bidhub/infrastructure/sending/: local_email.py  notification_service.py
backend/src/bidhub/infrastructure/sqla_db/: config.py  models.py  pagination.py
backend/src/bidhub/main/: __init__.py
backend/src/bidhub/main/providers/: __init__.py  configuration.py  connections.py  database.py  password_manager.py  sending.py  services.py  task_queue.py  usecases.py  validators.py
backend/src/bidhub/presentation/: auth_guard.py
(+235 files in other folders)
