[tool.poetry]
name = "bidhub"
version = "0.1.0"
description = "BidHub Backend MVP"
authors = ["Grigory Yolkin <gyolkin380@yandex.ru>"]
readme = "readme.md"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.test.dependencies]
httpx = "^0.27.0"
pytest = "^8.2.0"
pytest-asyncio = "^0.23.6"
pytest-cov = "^5.0.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.5.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
